--- a/style/style.css
+++ b/style/style.css
@@ -108,3 +108,9 @@ form button {
   font-size: 15px;
   box-shadow: 0 0 0 0.09rem var(--primary-100);
 }
+
+.fixed-image {
+  width: 20px; /* Adjust as needed */
+  height: 20px; /* Keep it square */
+  object-fit: cover; /* Crop the image while maintaining aspect ratio */
+}
