--- a/style/style.css
+++ b/style/style.css
@@ -14,6 +14,10 @@
   --bg-opacity-200: #f5f4f19d;
   --primary-font: "Poppins", serif;
 }
+* {
+  box-sizing: border-box;
+  list-style: none;
+}
 body {
   background-color: var(--bg-body);
   font-family: var(--primary-font) !important;
@@ -130,6 +134,7 @@ header a.btn:hover,
   background-position: bottom right;
   background-repeat: no-repeat;
   transition: all 1s;
+  background-size: 80%;
 }
 .hidden {
   opacity: 0;
@@ -146,6 +151,7 @@ header a.btn:hover,
   background-color: var(--text-100);
   color: var(--bg-body);
   border-radius: 0%;
+  font-size: 18px;
 }
 .categories button:hover {
   background-color: var(--bage-color);
@@ -158,9 +164,16 @@ header a.btn:hover,
 .category-list li a:hover {
   color: var(--accent-200);
 }
+
 .product-card {
   background-color: var(--bg-200);
-  /* box-shadow: 0px 0px 3px var(--text-200); */
+  height: 400px;
+}
+.product-card img {
+  height: 60%;
+  width: 100%;
+  object-fit: contain;
+  object-position: center;
 }
 
 .product-card p {
@@ -185,4 +198,120 @@ button.search:hover {
 #products form input.form-control:focus {
   border: 1px solid var(--bage-color);
   box-shadow: none;
+}
+@media only screen and (max-width: 600px) {
+  header h1 {
+    font-size: 35px;
+  }
+  header p {
+    font-size: 12px;
+  }
+  header a.btn {
+    font-size: 14px;
+  }
+  .categories button {
+    font-size: 10px;
+  }
+  .category-list li a {
+    font-size: 10px;
+  }
+  button.search {
+    font-size: 10px;
+  }
+  #products form input[type="search"] {
+    width: 50%;
+  }
+  .product-card p {
+    font-size: 12px;
+  }
+  .product-card h5 {
+    font-size: 14px;
+  }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  header h1 {
+    font-size: 35px;
+  }
+  header p {
+    font-size: 12px;
+  }
+  header a.btn {
+    font-size: 14px;
+  }
+  .categories button {
+    font-size: 10px;
+  }
+  .category-list li a {
+    font-size: 10px;
+  }
+  button.search {
+    font-size: 10px;
+  }
+  #products form input[type="search"] {
+    width: 50%;
+  }
+  .product-card p {
+    font-size: 12px;
+  }
+  .product-card h5 {
+    font-size: 14px;
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  header h1 {
+    font-size: 45px;
+  }
+  header p {
+    font-size: 15px;
+  }
+  header a.btn {
+    font-size: 14px;
+  }
+  .header-silde {
+    background-size: contain;
+  }
+  .categories button {
+    font-size: 14px;
+  }
+  .category-list li a {
+    font-size: 14px;
+  }
+  button.search {
+    font-size: 14px;
+  }
+  .product-card p {
+    font-size: 15px;
+  }
+  .product-card h5 {
+    font-size: 16px;
+  }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  header h1 {
+    font-size: 65px;
+  }
+  header p {
+    font-size: 18px;
+  }
+  header a.btn {
+    font-size: 18px;
+  }
+  .header-silde {
+    background-size: 75%;
+  }
+  .categories button {
+    font-size: 18px;
+  }
+  .category-list li a {
+    font-size: 18px;
+  }
+  button.search {
+    font-size: 16px;
+  }
 }
