--- a/style/style.css
+++ b/style/style.css
@@ -420,10 +420,14 @@ form button {
   width: 150px;
 }
 
-.add {
-  background-color: var(--text-100) !important ;
+.ad {
+  background-color: var(--text-100);
   border: 2px solid var(--primary-300);
   color: var(--primary-100);
+}
+.ad:hover {
+  background-color: var(--bage-color);
+  color: var(--bg-body);
 }
 
 .res:hover {
@@ -450,223 +454,4 @@ form button {
   width: 20px; /* Adjust as needed */
   height: 20px; /* Keep it square */
   object-fit: cover; /* Crop the image while maintaining aspect ratio */
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-:root {
-  --primary-100: #d4eaf7;
-  --primary-200: #b6ccd8;
-  --primary-300: #3b3c3d;
-  --accent-100: #71c4ef;
-  --accent-200: #00668c;
-  --text-100: #1d1c1c;
-  --text-200: #313d44;
-  --bg-body: #fffefb;
-  --bg-200: #f5f4f1;
-  --bg-300: #cccbc8;
-  --bage-color: #8f5f49;
-  --bg-opacity-200: #f5f4f19d;
-  --primary-font: "Poppins", serif;
-}
-
-body {
-  background-color: var(--bg-body);
-  font-family: var(--primary-font) !important;
-  color: var(--text-100);
-}
-
-/*nav  */
-.navbar-brand {
-  color: var(--bg-300);
-}
-
-.navbar {
-  background-color: var(--text-100);
-  margin-bottom: 10px;
-}
-
-.navbar .nav-link {
-  color: var(--bg-300);
-}
-
-.navbar .person {
-  margin-right: 60px;
-}
-
-.navbar .person .dropdown {
-  list-style-type: none;
-}
-
-.navbar .person .dropdown .dropdown-toggle {
-  color: var(--accent-200);
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.navbar .person .dropdown .dropdown-toggle img {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-}
-
-.navbar .person .dropdown .dropdown-toggle::after {
-  display: none;
-}
-
-.navbar .person .dropdown-menu {
-  min-width: 30px;
-
-  background-color: red;
-  --bs-dropdown-link-hover-bg: none;
-  --bs-dropdown-link-active-bg: none;
-}
-
-.navbar .person .dropdown-menu .dropdown-item {
-  color: white;
-}
-
-/* add user */
-.adduser {
-  padding: 20px;
-  border-radius: 15px;
-  background-color: var(--bg-300);
-  font-weight: bold;
-  color: var(--text-100);
-  accent-color: var(--accent-100);
-  margin-bottom: 10px;
-}
-
-.adduser button {
-  background-color: #1d1c1c;
-  color: var(--primary-100);
-  width: 100px;
-  height: 40px;
-  border: none;
-  border-radius: 10px;
-}
-.login {
-  margin-top: 100px;
-}
-
-.error {
-  color: darkred;
-}
-.forget a {
-  color: darkred;
-}
-/* my orders */
-.tablebx {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.tablebx .filterdate {
-  margin: 30px 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.tablebx .filterdate label {
-  color: var(--text-200);
-  font-weight: bold;
-}
-
-.tablebx .filterdate button {
-  background-color: var(--accent-100);
-  color: var(--accent-200);
-  width: 100px;
-  height: 40px;
-  border: none;
-  border-radius: 10px;
-}
-
-.tablebx h1 {
-  color: var(--text-200);
-}
-
-.tablebx table {
-  --bs-table-color: var(--accent-100);
-}
-
-.tablebx table thead {
-  --bs-table-bg: var(--accent-100);
-  --bs-table-color: var(--accent-200);
-}
-
-.tablebx .productbx {
-  margin-top: 20px;
-  padding: 30px;
-}
-
-.tablebx .productbx .row {
-  justify-content: space-around;
-  align-items: center;
-}
-
-.tablebx .productbx .total {
-  background-color: var(--accent-100);
-  color: var(--accent-200);
-}
-
-.tablebx .productbx .product {
-  height: 300px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  position: relative;
-  color: var(--accent-100);
-}
-
-.tablebx .productbx .product img {
-  width: 100px;
-  height: 90px;
-}
-
-.tablebx .productbx .product .price {
-  width: 55px;
-  height: 55px;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  top: 10px;
-  right: 0;
-  z-index: 100;
-  background-color: var(--accent-100);
-  color: var(--accent-200);
-}
-
-.tablebx .productbx .product .name {
-  text-transform: uppercase;
-  font-weight: bold;
-}
-
-.tablebx .productbx .product .order {
-  background-color: var(--accent-200);
-  text-transform: uppercase;
-  font-weight: bold;
-}
-
-footer {
-  background-color: var(--text-100);
-  color: var(--bg-300);
-
-  width: 100%;
-  height: 200px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  /* position: absolute;
-    bottom: 0; */
 }
