--- a/style/style.css
+++ b/style/style.css
@@ -24,6 +24,9 @@ body {
   font-family: var(--primary-font) !important;
   color: var(--text-100);
 }
+.mb-50 {
+  margin-bottom: 50px;
+}
 .total-price {
   display: flex;
   justify-content: end;
